Changes for 1.6.8

 - [ZBX-1276] fixed import template as template if status tag is after groups tag in xml (Vedmak)
 - [ZBX-1150] added refreshing of not supported performance counters (Sasha)

Changes for 1.6.7

 - [ZBX-1022] fixed syntax in parameter 'continue_pending' in services[] key (Sasha)
 - [ZBX-1202] fixed processing of proc_info[] check with 'sum' parameter. Thanks to Kazuo Ito (Sasha)
 - [ZBX-1148] fixed flap between available and unavailable for hosts with mixed agent and simple checks (Sasha)
 - [ZBX-1051] fixed processing of active checks list on the agent side. Symptom: 'Can't open JSON object' message (Sasha)
 - [ZBX-641] fixed oracle OCI-Lob parse (Aly)
 - [ZBX-1078] changed link in server info screen element (Vedmak)
 - [ZBX-1076] fixed IT services periods (Vedmak)
 - [ZBX-1019] fixed stacked graph displays 0 value (Vedmak)
 - [ZBX-1040] fixed error when massupdate triggers with empty dependency (Vedmak)
 - [ZBX-820] fixed updating downstream item applications when upstream item is updated without changing applications (Vedmak)
 - [DEV-426] added new command line parameter '-T' for zabbix_sender (Sasha)
 - [ZBX-1068] fix typos related to height/high (Richlv)
 - [ZBX-948] fixed not working keyboard keys in numericboxes for Opera (Vedmak)
 - [ZBX-915] fixed pgsql cycling on transaction failure (Artem)
 - [ZBX-985] fixed pgsql return value (Artem)
 - [ZBX-1035] fixed possibility to import graphs to host we don't have permissions (Vedmak)
 - [ZBX-1062] deny creation of log and eventlog items with non log type of information (Vedmak)
 - [DEV-137] fix incorrect key syntax error message (Richlv)
 - [ZBX-1054] fixed processing of logs and eventlogs which become empty only on the agent side (Dmitry)
 - [ZBX-1055] fixed DBexecute function result with PostreSQL (Sasha)
 - [ZBX-778] added support of $1..$9 macros in the {ITEM.NAME} macro in notifications (Sasha)